# Bad-Craft-Launcher

./: README.md  index.html  package.json  pnpm-lock.yaml  settings.gradle.kts  vite.config.ts
.github/workflows/: build.yml
Bad-Craft-Launcher/: build.gradle.kts
Bad-Craft-Launcher/src/jvmMain/kotlin/com/tntyep520/bad/craft/launcher/: main.kt
Bad-Craft-Launcher/src/jvmTest/kotlin/com/tntyep520/bad/craft/launcher/: ComposeAppDesktopTest.kt
composeApp/src/jvmMain/kotlin/com/tntyep520/bad/craft/launcher/: App.kt  Greeting.kt  Platform.kt
src/: App.vue  Home.vue  home.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src/components/: Navbar.vue
