[package]
name = "Bad-Craft-Launcher"
version = "1.0.10"
description = "A Minecraft: Java Edition on Cross-Platform devices"
license = "GNU General Public License v3.0"
repository = "https://github.com/Bad-Craft-Launcher/Bad-Craft-Launcher"
homepage = "https://launcher.dcrstudio.top"
authors = ["TNTyep520 <sbtntyep520@gmail.com>"]
rust-version = "1.92.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

[lib]
name = "bad_craft_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
