[package]
name = "Bad-Craft-Launcher"
version = "1.0.10"
description = "A Minecraft: Java Edition on Cross-Platform devices"
license = "GNU General Public License v3.0"
repository = "https://github.com/Bad-Craft-Launcher/Bad-Craft-Launcher"
authors = ["TNTyep520 <sbtntyep520@gmail.com>"]
rust-version = "1.92.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
strip = "symbols"
split-debuginfo = "off"
rpath = false

[lib]
name = "bad_craft_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]

# Tauri Library
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
